--- a/views/email/vote.tpl.html
+++ b/views/email/vote.tpl.html
@@ -68,9 +68,10 @@ background-color: #f6f6f6;
 							<table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-										<p>I, {{user.firstName}} {{user.lastName}} your constituent voted {{voteString}} on the question {{vote.title}} for the bill {{bill.title}}. As your constituent, you knowing this information allows us to build a relationship and engage in policy-based dialog.</p>
+										<p>I, {{user.firstName}} {{user.lastName}}, your constituent, voted {{voteString}} on the question {{vote.title}} for the bill {{bill.title}}. As your constituent, you knowing this information allows us to build a relationship and engage in policy-based dialog.</p>
+										<br>
 										<p>Myself alongside with {{voteCount}} of your constituents with support of 20,723 of the general population agree the attached legislation is important.</p>
-										<p>Please take the time to read.</p>
+										<br>
 										<p>Please continue this conversation, I can be reached by mail at {{address}}, by email at {{email}}, and by phone at {{phone}}.</p>
 										<p>Once again, {{voteCount}} of your constituents support this legislation, and {{constitutents}} persons have given me permission to speak for them on behalf of this cause.</p>
 										<p>I appreciate an open dialog.</p>
@@ -79,24 +80,29 @@ background-color: #f6f6f6;
 								</tr>
 								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-										<p><a href="{{bill.url}}">{{bill.title}}</a></p>
-										<p>{{vote.title}}</p>
 										<hr>
 										<h4>Constituent Information</h4>
 										<p>Government Identification</p>
 										<img src="{{user.identificationUrl}}"></img>
-										<p>Address</p>
-										{{address}}
-										<p>contact</p>
+										<br>
+										<p>Address:</p>
+										<p>{{address}}</p>
+										<p>Contact</p>
 										<p>phone: {{phone}}</p>
 										<p>email: {{email}}<p>
+										<br>
+										<hr>
+										<h4>Vote Information</h4>
+										<p><a href="{{bill.url}}">{{bill.title}}</a></p>
+										<p>{{vote.title}}</p>
 										<br>
 										<p>Constituent vote</p>
 										<p>{{voteString}}</p>
 										<p>Legislator's vote</p>
 										<p>{{voteString}}</p>
-										<p>Vote statistics – total votes, total constitutes vote, support %</p>
-										<!--<p>Legislative vote sway – how far representative voting has an effect</p>-->
+										<p>Vote Statistics</p>
+										<p>total votes ( {{voteCount}} ), total constitutes vote ( {{constitutents}} ), support {{voteCount / constitutents}}%</p>
+										<p>Legislative vote sway – how far representative voting has an effect</p>
 									</td>
 								</tr>
 								
