--- a/views/email/vote.tpl.html
+++ b/views/email/vote.tpl.html
@@ -69,9 +69,7 @@ background-color: #f6f6f6;
 								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
 										<p>I, {{user.firstName}} {{user.lastName}}, your constituent, voted {{voteString}} on the question {{vote.title}} for the bill {{bill.title}}. As your constituent, you knowing this information allows us to build a relationship and engage in policy-based dialog.</p>
-										<br>
 										<p>Myself alongside {{voteCount}} of your constituents with support of 20,723 of the general population agree the attached legislation is important.</p>
-										<br>
 										<p>Please continue this conversation, I can be reached by mail at {{address}}, by email at {{email}}, and by phone at {{phone}}.</p>
 										<p>Once again, {{voteCount}} of your constituents support this legislation, and {{constituents}} persons have given me permission to speak for them on behalf of this cause.</p>
 										<p>I appreciate an open dialog.</p>
@@ -94,7 +92,7 @@ background-color: #f6f6f6;
 										<hr>
 										<h4>Vote Information</h4>
 										<p><a href="https://www.voetr.com/bill/{{bill.id}}/{{bill.urlTitle}}">{{bill.title}}</a></p>
-										<p>{{vote.title}}</p>
+										<p><a href="https://www.voetr.com/vote/{{vote.id}}">{{vote.title}}</a></p>
 										<br>
 										<p>Constituent vote</p>
 										<p>{{voteString}}</p>
