--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -45,7 +45,7 @@
                     <h4>
                         <!--<button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{plusCount}}</button>
                         <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{minusCount}}</button>-->
-                        <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
+                        <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}"><i class="fa fa-file-text-o"></i> {{bill.title}}</a>
                     </h4>
                     </md-card-title-text>
                 </md-card-title>
