--- a/.tmp/public/src/app/committee/templates/bills.tpl.html
+++ b/.tmp/public/src/app/committee/templates/bills.tpl.html
@@ -15,7 +15,7 @@
         <div class="card-container">
             <div>
                 <h4><i class="fa fa-file-text-o"></i><a href="bill/{{committeeBill.bill.id}}/{{committeeBill.bill.title}}"> {{committeeBill.bill.title}}</a></h4>
-                <h4><a href="committee/{{committeeBill.committee.urlTitle}}">{{committeeBill.committee.title}}</a></h4>
+                <p><a href="committee/{{committeeBill.committee.urlTitle}}">{{committeeBill.committee.title}}</a></p>
                 <span class="grey" am-time-ago="committeeBill.updatedAt"></span>
             </div>
         </div>
