--- a/.tmp/public/src/app/post/index.tpl.html
+++ b/.tmp/public/src/app/post/index.tpl.html
@@ -1,6 +1,8 @@
 <div class="container">
-    <p ng-show="post.postModel">in response to <a href="post/{{post.postModel}}">post</a></p>
-    <md-card style="margin-top:5%;margin-bottom:5%">
+    <div class="spacing-10"></div>
+    <h4 ng-show="post.postModel">in response to <a href="post/{{post.postModel}}">{{post.user.username}}</a></h4>
+    <div class="spacing-5"></div>
+    <md-card>
         <div class="card-container">
             <div class="post-controller-container">
                 <a href="/member/{{post.user.username}}">
@@ -33,9 +35,10 @@
 
             <div class="post-action-container">
                 <div class="pull-left">
-                    <a href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
-                    <a href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
-                    <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
+                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
+                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
+                    <a style="padding:5px" href="#" class="grey" ng-click="reply(post)"><i class="fa fa-comment-o"></i> reply </a>
+                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
                 </div>
                 <div class="pull-right">
                     <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
@@ -47,7 +50,7 @@
                     <md-input-container class="md-block">
                         <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
                     </md-input-container>
-                    <button ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+                    <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
                 </form>
             </div>
 
@@ -94,10 +97,13 @@
 
                     <div class="post-action-container">
                         <div class="pull-left">
-                            <a href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-                            <a href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
-                            <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
+                            <a style="padding:5px" href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                            <a style="padding:5px" href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                            <a style="padding:5px" href="#" class="grey" ng-click="reply(post)"><i class="fa fa-comment-o"></i> reply </a>
+                            <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
                         </div>
+
+
                         <div class="pull-right">
                             <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
                         </div>
