--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -16,18 +16,34 @@
             <div class="col-md-6">
                 <h1>be part of the movement</h1>
                 <h4>direct your impact though input on policy</h4>
-                <!--<h4>create coalitions of representation</h4>-->
                 <h4>create constituent coalitions</h4>
                 <br><br>
                 <a style="width:100%" href="/about" class="btn btn-default">learn more</a>
-                <!--reduce polarization-->
-                <!--seeing past partisan politics-->
-                <!--<p>directly impact the creation of policy</p>-->
-                <!--<p>creating a coalition of representation</p>-->
             </div>
+
             <div class="col-md-12">
                 <div class="spacing-100"></div>
             </div>
+
+
+            <div class="col-md-4" style="text-align:center">
+                <i class="fa fa-group" style="font-size:100px;"></i>
+                <h5>blockchain, seeing past partisan politics</h5>
+            </div>
+            <div class="col-md-4" style="text-align:center">
+                <i class="fa fa-bullhorn" style="font-size:100px"></i>
+                <h5>directly impact the creation of policy, reduce polarization, see past partisan politics</h5>
+            </div>
+            <div class="col-md-4" style="text-align:center">
+                <i class="fa fa-file-text-o" style="font-size:100px"></i>
+                <h5>creating a coalition of representation, create coalitions of representation</h5>
+            </div>
+
+            <div class="col-md-12">
+                <div class="spacing-100"></div>
+            </div>
+
+
         </div>
     </div>
 
@@ -49,9 +65,19 @@
                     </h4>
                     </md-card-title-text>
                 </md-card-title>
+
+                <div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
+                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
+                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-comment-o"></i> comment </a>
+                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+                    <!--<a style="" class="pull-right" href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}"><i class="fa fa-link grey"></i></a>-->
+                </div>
+
+
             </md-card> 
             <div ng-click="loadMoreBills()" style="text-align:center">
-                <button style="margin-top:25px;" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
+                <button style="margin-top:25px;" class="btn btn-default col-xs-12">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
     </div>
@@ -63,12 +89,12 @@
             <md-card ng-repeat="committee in committees" class="col-sm-12">
                 <md-card-title>
                     <md-card-title-text>
-                        <h4><a href="/committee/{{committee.urlTitle}}"><span class="">{{committee.title}}</span></a></h4>
+                        <h4><a href="/committee/{{committee.urlTitle}}"><i class="fa fa-users" aria-hidden="true"></i> <span class="">{{committee.title}}</span></a></h4>
                     </md-card-title-text>
                 </md-card-title>
             </md-card>
             <div ng-click="loadMoreCommittees()" style="text-align:center">
-                <button style="margin-top:25px;" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
+                <button style="margin-top:25px;" class="btn btn-default col-xs-12">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
     </div>
@@ -114,7 +140,7 @@
                 </div>
             </div>
             <div ng-click="loadMoreMembers()" style="text-align:center">
-                <button style="margin-top:25px;" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
+                <button style="margin-top:25px;" class="btn btn-default col-xs-12">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
     </div>
