--- a/.tmp/public/styles/css/theme.css
+++ b/.tmp/public/styles/css/theme.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Jura:300,400,600');
 @import "https://fonts.googleapis.com/css?family=Cantarell";
+@import "http://fonts.googleapis.com/css?family=Barlow";
 
 html {
     height:100%;
