--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -26,7 +26,7 @@
             </div>
 
 
-            <div class="col-md-4" style="text-align:center">
+            <!--<div class="col-md-4" style="text-align:center">
                 <i class="fa fa-group" style="font-size:100px;"></i>
                 <h5>blockchain, seeing past partisan politics</h5>
             </div>
@@ -41,7 +41,7 @@
 
             <div class="col-md-12">
                 <div class="spacing-100"></div>
-            </div>
+            </div>-->
 
 
         </div>
