--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -1,7 +1,7 @@
 <div class="imageContainerSmall">
     <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4" playsinline></video>
     <div class="imageContainerSmallDiv container">  
-        <h1 style="text-align:left">bills</h1>
+        <h1 style="text-align:left">Bills</h1>
     </div>
 </div>
 <div class="container">
