--- a/assets/src/app/footer/index.tpl.html
+++ b/assets/src/app/footer/index.tpl.html
@@ -13,15 +13,15 @@
 <div class="footer" ng-controller="FooterCtrl">
 	<div class="container">
 		<div class="footer-left col-md-6 col-sm-6  col-xs-12">
-			{{date | date:'yyyy'}} <a href="/">voetr</a>
+			{{date | date:'yyyy'}} <a href="/" ui-sref="home">voetr</a>
 		</div>
 		<div class="footer-right col-md-6 col-sm-6 col-xs-12">
-			<a href="/about">About</a>
-			<a href="/search">Discover</a>
-			<a href="/bills">Bills</a>
-			<a href="/committees">Committees</a>
-			<!--<a href="/members">members</a>-->
-			<a href="/votes">Votes</a>
+			<a href="/about" ui-sref="about">About</a>
+			<a href="/search" ui-sref="search">Discover</a>
+			<a href="/bills" ui-sref="bills">Bills</a>
+			<a href="/committees" ui-sref="committees">Committees</a>
+			<!--<a href="/members" ui-sref="register">members</a>-->
+			<a href="/votes" ui-sref="votes">Votes</a>
 		</div>
 	</div>
 </div>
