--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -37,19 +37,19 @@
                     </div>
                 </form>
 
-                <h2 ng-show="!currentUser" class="nav-links" style="padding:16px;"><a href="/about">About</a></h2>
-                <h2 class="nav-links" ng-show="currentUser" style="padding:16px;"><a href="member/{{currentUser.username}}">{{currentUser.username}}</a></h2>
-                <h2 class="nav-links" style="padding:16px;"><a href="/search">Discover</a></h2>
-                <h2 class="nav-links" style="padding:16px;"><a href="/bills">Bills</a></h2>
-                <h2 class="nav-links" style="padding:16px;"><a href="/committees">Committees</a></h2>
+                <h2 ng-show="!currentUser" class="nav-links" style="padding:16px;"><a href="/about" ui-sref="about">About</a></h2>
+                <h2 class="nav-links" ng-show="currentUser" style="padding:16px;"><a href="member/{{currentUser.username}}" ui-sref="member.activity({path:currentUser.username})">{{currentUser.username}}</a></h2>
+                <h2 class="nav-links" style="padding:16px;"><a href="/search" ui-sref="search">Discover</a></h2>
+                <h2 class="nav-links" style="padding:16px;"><a href="/bills" ui-sref="bills">Bills</a></h2>
+                <h2 class="nav-links" style="padding:16px;"><a href="/committees" ui-sref="committees">Committees</a></h2>
                 <h2 class="nav-links" style="padding:16px;"><a href="/votes">Votes</a></h2>
-                <h2 ng-show="currentUser" class="nav-links" style="padding:16px;"><a href="/notifications">Notifications</a></h2>
-                <h2 ng-show="currentUser" class="nav-links" style="padding:16px;"><a href="/account">Settings</a></h2>
+                <h2 ng-show="currentUser" class="nav-links" style="padding:16px;"><a href="/notifications" ui-sref="notifications">Notifications</a></h2>
+                <h2 ng-show="currentUser" class="nav-links" style="padding:16px;"><a href="/account" ui-sref="account">Settings</a></h2>
                 <h2 ng-show="currentUser" class="nav-links" style="padding:16px;"><a href="/logout">Logout</a></h2>
                 <h2 ng-show="!currentUser" class="nav-links" style="padding:16px;"><a href="/login">Login</a></h2>
-                <h2 ng-show="!currentUser" class="nav-links" style="padding:16px;"><a href="/register">Register</a></h2>
+                <h2 ng-show="!currentUser" class="nav-links" style="padding:16px;"><a href="/register" ui-sref="register">Register</a></h2>
 
-                <h2 class="nav-links" style="padding:16px;"><a href="/"><i style="color:#2ab996;font-size:50px" class="fa fa-check"></i></a></h2>
+                <h2 class="nav-links" style="padding:16px;"><a href="/" ui-sref="home"><i style="color:#2ab996;font-size:50px" class="fa fa-check"></i></a></h2>
 
             </div>
         </div>
@@ -91,7 +91,7 @@
                             </div>
                             <br><br>
                             <div class="social-log">
-                                <a style="text-align:center" href="/register"><h4>Need an Account?</h4></a>
+                                <a style="text-align:center" href="/register" ui-sref="register"><h4>Need an Account?</h4></a>
                             </div>
                         </form>
                     </div>
@@ -110,12 +110,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><i style="color:#2ab996" class="fa fa-check"></i>oetr</a>
+                <a class="navbar-brand" href="/" ui-sref="home"><i style="color:#2ab996" class="fa fa-check"></i>oetr</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li ng-show="!currentUser"><a href="/about">about</a></li>
-                    <li><a href="/search">discover</a></li>
+                    <li ng-show="!currentUser"><a href="/about" ui-sref="about">about</a></li>
+                    <li><a href="/search" ui-sref="search">discover</a></li>
                     <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
                         <div class="form-group" style="font-size:20px">
                             <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
@@ -133,7 +133,7 @@
                                     <img style="height:32px;width:32px;border-radius:3px" src="{{currentUser.avatarUrl}}"/> {{currentUser.username}}
                                 </a>
                             </li>
-                            <li><a href="/account">account</a></li>
+                            <li><a href="/account" ui-sref="account">account</a></li>
                             <li><a href="#">0 notifications</a></li>
                             <li><a href="#">settings</a></li>
 
@@ -141,7 +141,7 @@
                             <li><a href="/logout">log out</a></li>
                         </ul>
                     </li>
-                    <li ng-show="!currentUser"><a href="/register">register</a></li>
+                    <li ng-show="!currentUser"><a href="/register" ui-sref="register">register</a></li>
                     <li ng-show="!currentUser" ng-click="loginToggle()" ><a>login</a></li>
                 </ul>
             </div>
