--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -3,7 +3,7 @@
 		<div class="imageContainerSmall">
 			<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
 			<div class="imageContainerSmallDiv container">  
-				<h1 style="text-align:left">discover</h1>
+				<h1 style="text-align:left">Discover</h1>
 			</div>
 		</div>
 		<div class="container">
