--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -92,7 +92,7 @@
                     </div>
                 </md-card> 
             </div>
-            <div ng-click="loadMoreBills()" style="text-align:center" class="row">
+            <div ng-click="loadMoreBills()" style="text-align:center">
                 <button style="margin-top:25px;" class="btn btn-default log-btn">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
@@ -118,7 +118,7 @@
                     </md-card-title>
                 </md-card>
             </div>
-            <div ng-click="loadMoreCommittees()" style="text-align:center" class="row">
+            <div ng-click="loadMoreCommittees()" style="text-align:center">
                 <button style="margin-top:25px;" class="btn btn-default log-btn">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
@@ -174,7 +174,7 @@
                     </div>
                 </div>
             </div>
-            <div ng-click="loadMoreMembers()" style="text-align:center" class="row">
+            <div ng-click="loadMoreMembers()" style="text-align:center">
                 <button style="margin-top:25px;" class="btn btn-default log-btn">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
