--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -1,15 +1,27 @@
 <div ui-view="bill">
 	<div class="container">
 		<div class="spacing-10"></div>
-		<h4><i class="fa fa-file-text-o"></i> {{bill.title}}</h4>
-		<div ng-repeat="committeeBill in committees">
+		<div style="background:url('https://source.unsplash.com/1600x900/?congress,senate.people,code,government')" class="imageContainerSmall">
+            <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+                <div class="container" style="margin-top: auto;margin-bottom: auto;">
+                    <h1 style="text-align:left;font-size:35px;color:rgba(255,255,255,0.9);font-weight:400;"><i class="fa fa-file-text-o"></i> {{bill.title}}</h1>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+        	<div style="padding:16px">
+        		<div class="row">
+					<button class="col-xs-6 btn btn-default upVote" ng-click="createVote(1)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
+		        	<button class="col-xs-6 btn btn-default downVote" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
+		    	</div>
+        	</div>
+        </div>
+        <div ng-repeat="committeeBill in committees">
 			<p><a href="committee/{{committeeBill.committee.urlTitle}}" class="grey">{{committeeBill.committee.title}}</a></p>
 		</div>
-		<br>
-		<div class="row">
-			<button class="col-xs-6 btn btn-default upVote" ng-click="createVote(1)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
-        	<button class="col-xs-6 btn btn-default downVote" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
-    	</div>
+		<hr>
+
+	
     	<div class="spacing-10"></div>
 		<uib-tabset>
 			<uib-tab heading="Info" active="active">
